--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.12.2",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
