--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@mui/x-data-grid": "^7.8.0",
     "firebase": "^10.12.2",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
