--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.4",
+    "@mui/lab": "^5.0.0-alpha.172",
+    "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.8.0",
+    "@mui/x-date-pickers": "^7.11.0",
+    "date-fns": "2.13.0",
     "firebase": "^10.12.2",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
