--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@mui/x-data-grid": "^7.8.0",
     "@mui/x-date-pickers": "^7.11.0",
     "date-fns": "2.13.0",
+    "eslint-plugin-import": "^2.29.1",
     "firebase": "^10.12.2",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
@@ -28,15 +29,19 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.8.0",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.8.0",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^7.17.0",
     "vite": "^5.2.0"
   }
 }
