--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -19,7 +20,6 @@
     "@mui/x-date-pickers": "^7.11.0",
     "date-fns": "2.13.0",
     "eslint-plugin-import": "^2.29.1",
-    "date-fns": "^2.13.0",
     "firebase": "^10.12.2",
     "mobx": "^6.12.4",
     "mobx-react-lite": "^4.0.7",
