--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.8.0",
     "@mui/x-date-pickers": "^7.11.0",
-    "date-fns": "2.13.0",
+    "date-fns": "^2.25.0",
     "eslint-plugin-import": "^2.29.1",
     "firebase": "^10.12.2",
     "mobx": "^6.12.4",
@@ -31,16 +31,17 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/lodash": "^4.17.9",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^9.8.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.8.0",
+    "lodash": "^4.17.21",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.17.0",
     "vite": "^5.2.0"
