--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,18 +23,27 @@
     "plugin:import/typescript",
     "plugin:react/recommended"
   ],
-  "ignorePatterns": ["lib"],
+  "ignorePatterns": [
+    "lib"
+  ],
   "rules": {
     // Import and module-related rules
     "import/order": [
       "error",
       {
-        "groups": ["external", "parent", ["sibling", "index"], "type"],
-        "newlines-between": "always"
+        "groups": [
+          "external",
+          "parent",
+          [
+            "sibling",
+            "index"
+          ]
+          //          "type"
+        ]
+        //        "newlines-between": "always"
       }
     ],
     "eslint-plugin-import/no-unresolved": "off",
-
     // React-specific rules
     "react/react-in-jsx-scope": "off",
     "react/display-name": "off",
@@ -46,8 +55,9 @@
         "unnamedComponents": "arrow-function"
       }
     ],
-    "react/jsx-curly-brace-presence": ["error"],
-
+    "react/jsx-curly-brace-presence": [
+      "error"
+    ],
     // TypeScript-specific rules
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/consistent-type-imports": "warn",
@@ -61,7 +71,9 @@
       },
       {
         "selector": "typeLike",
-        "format": ["PascalCase"]
+        "format": [
+          "PascalCase"
+        ]
       }
     ],
     "@typescript-eslint/no-unused-vars": [
@@ -70,9 +82,11 @@
         "ignoreRestSiblings": true
       }
     ],
-
     // Code quality and formatting rules
-    "block-spacing": ["error", "always"],
+    "block-spacing": [
+      "error",
+      "always"
+    ],
     "camelcase": [
       "warn",
       {
@@ -80,10 +94,14 @@
         "ignoreDestructuring": true
       }
     ],
-    "comma-spacing": ["error"],
+    "comma-spacing": [
+      "error"
+    ],
     "semi-spacing": "error",
     "semi": "off",
-    "@typescript-eslint/semi": ["error"],
+    "@typescript-eslint/semi": [
+      "error"
+    ],
     "max-len": [
       "error",
       {
@@ -92,11 +110,17 @@
         "ignorePattern": "^import |//|\"[^\"]{100,}\""
       }
     ],
-    "eqeqeq": ["error", "smart"],
+    "eqeqeq": [
+      "error",
+      "smart"
+    ],
     "no-console": [
       "warn",
       {
-        "allow": ["warn", "error"]
+        "allow": [
+          "warn",
+          "error"
+        ]
       }
     ],
     "no-empty": [
@@ -113,7 +137,9 @@
     ],
     "guard-for-in": "error",
     "keyword-spacing": "error",
-    "key-spacing": ["error"],
+    "key-spacing": [
+      "error"
+    ],
     "quotes": [
       "error",
       "double",
@@ -122,7 +148,10 @@
         "avoidEscape": true
       }
     ],
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
     "eol-last": "error",
     "no-trailing-spaces": "error",
     "no-var": "error",
@@ -133,12 +162,23 @@
         "maxBOF": 0
       }
     ],
-    "no-multi-spaces": ["error"],
-    "no-whitespace-before-property": ["error"],
-    "space-before-blocks": ["error", "always"],
-    "space-in-parens": ["error", "never"],
-    "arrow-spacing": ["error"],
-
+    "no-multi-spaces": [
+      "error"
+    ],
+    "no-whitespace-before-property": [
+      "error"
+    ],
+    "space-before-blocks": [
+      "error",
+      "always"
+    ],
+    "space-in-parens": [
+      "error",
+      "never"
+    ],
+    "arrow-spacing": [
+      "error"
+    ],
     // Spacing rules for code structure
     "padding-line-between-statements": [
       "error",
@@ -148,7 +188,6 @@
         "next": "return"
       }
     ],
-
     // React hooks rules
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
