--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^5.0.0",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1"
   },
