--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^7.8.0",
     "@mui/x-date-pickers": "^7.11.0",
+    "@tanstack/react-query": "^5.66.9",
     "date-fns": "^2.25.0",
     "eslint-plugin-import": "^2.29.1",
     "firebase": "^10.12.2",
