--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.10.0",
+    "jest": "^30.0.0",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.18.0",
-    "vite": "^6.2.0",
+    "vite": "6.3.4",
     "vitest": "^3.0.5"
   }
 }
