--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     "types": [
-      "vitest",
+      "vitest/globals",
       "node"
     ],
     /* Bundler mode */
