--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@eslint/js": "^9.12.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/lodash": "^4.17.9",
     "@types/node": "^22.13.4",
     "@types/react": "^18.2.66",
@@ -50,7 +51,6 @@
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.10.0",
-    "jest": "^30.0.0",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
     "typescript": "^5.2.2",
