--- a/.prettierrc
+++ b/.prettierrc
@@ -9,26 +9,41 @@
   "trailingComma": "all",
   "jsxBracketSameLine": false,
   "arrowParens": "always",
+  "endOfLine": "crlf",
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx"],
-      "options": { "parser": "typescript" }
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
+      "options": {
+        "parser": "typescript"
+      }
     },
     {
       "files": "*.md",
-      "options": { "parser": "markdown" }
+      "options": {
+        "parser": "markdown"
+      }
     },
     {
       "files": "*.yml",
-      "options": { "parser": "yaml" }
+      "options": {
+        "parser": "yaml"
+      }
     },
     {
       "files": "*.json",
-      "options": { "parser": "json", "printWidth": 80 }
+      "options": {
+        "parser": "json",
+        "printWidth": 80
+      }
     },
     {
       "files": "*.css",
-      "options": { "parser": "css" }
+      "options": {
+        "parser": "css"
+      }
     }
   ]
 }
