--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.7",
     "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.10.0",
     "jsdom": "^26.0.0",
     "lodash": "^4.17.21",
+    "prettier": "^3.5.3",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.18.0",
     "vite": "6.3.4",
