--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-data-grid": "^7.8.0",
     "@mui/x-date-pickers": "^7.11.0",
     "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.11.0",
     "date-fns": "^2.25.0",
     "eslint-plugin-import": "^2.29.1",
     "firebase": "^11.4.0",
