--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,12 +10,7 @@
       "version": "detect"
     }
   },
-  "plugins": [
-    "@typescript-eslint",
-    "react-hooks",
-    "import",
-    "react"
-  ],
+  "plugins": ["@typescript-eslint", "react-hooks", "import", "react"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
@@ -24,9 +19,7 @@
     "plugin:react/recommended",
     "plugin:prettier/recommended"
   ],
-  "ignorePatterns": [
-    "lib"
-  ],
+  "ignorePatterns": ["lib"],
   "rules": {
     // Import and module-related rules
     "import/order": [
@@ -63,7 +56,7 @@
       }
     ],
     // TypeScript-specific rules
-    "no-unused-vars": "warn",
+    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": [
       "warn",
       {
@@ -82,16 +75,11 @@
       },
       {
         "selector": "typeLike",
-        "format": [
-          "PascalCase"
-        ]
+        "format": ["PascalCase"]
       }
     ],
     // Code quality and formatting rules
-    "block-spacing": [
-      "error",
-      "always"
-    ],
+    "block-spacing": ["error", "always"],
     "camelcase": [
       "warn",
       {
@@ -107,17 +95,11 @@
         "ignorePattern": "^import |//|\"[^\"]{100,}\""
       }
     ],
-    "eqeqeq": [
-      "error",
-      "smart"
-    ],
+    "eqeqeq": ["error", "smart"],
     "no-console": [
       "warn",
       {
-        "allow": [
-          "warn",
-          "error"
-        ]
+        "allow": ["warn", "error"]
       }
     ],
     "no-empty": [
@@ -134,9 +116,7 @@
     ],
     "guard-for-in": "error",
     "keyword-spacing": "error",
-    "key-spacing": [
-      "error"
-    ],
+    "key-spacing": ["error"],
     "eol-last": "error",
     "no-trailing-spaces": "error",
     "no-var": "error",
@@ -147,23 +127,11 @@
         "maxBOF": 0
       }
     ],
-    "no-multi-spaces": [
-      "error"
-    ],
-    "no-whitespace-before-property": [
-      "error"
-    ],
-    "space-before-blocks": [
-      "error",
-      "always"
-    ],
-    "space-in-parens": [
-      "error",
-      "never"
-    ],
-    "arrow-spacing": [
-      "error"
-    ],
+    "no-multi-spaces": ["error"],
+    "no-whitespace-before-property": ["error"],
+    "space-before-blocks": ["error", "always"],
+    "space-in-parens": ["error", "never"],
+    "arrow-spacing": ["error"],
     // Spacing rules for code structure
     "padding-line-between-statements": [
       "error",
