--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,6 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "workbench.colorTheme": "Monokai",
+  "workbench.colorTheme": "SynthWave84",
   "files.autoSave": "onFocusChange"
 }
