--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.4",
     "@mui/system": "^5.16.14",
+    "@mui/x-charts": "^8.24.0",
     "@mui/x-data-grid": "^7.8.0",
     "@mui/x-date-pickers": "^7.11.0",
     "@tanstack/react-query": "^5.66.9",
